# meow-uv

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: release.yml  test.yml
meow/: __init__.py
src/: test_index.py
tests/: test_init.py
