[project]
name = "meow-uv"
version = "0.1.5"
description = "Determines if a string is a meow"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest>=8.3.4",
]

[build-system]
requires = ["setuptools>=61.2", "wheel"]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]
include = ["meow*"]
exclude = ["tests*"]
namespaces = false
